# ve-edu-vault

./: .dockerignore  .env  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  data  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml  exceptions.py  generate_key.py  manage.py  mongodb.py  nosql_database_engine.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  sample.py  sample_recommendation_engine.py  tailwind.config.js
.github/workflows/: test.yml
ai_core/: create_embedding.py  learning_mode_rules.py  models.py  performance_calculators.py  performance_engine.py  recommendation_engine.py  recommendation_engine.txt  sample  sample.py  utils.py
ai_core/ai/: edu_ai_engine.py
ai_core/orchestration/: main.py  tasks.py  (+1 more)
content/: models.py  urls.py  views.py
course_builder/: apps.py
course_sync/: apps.py  change_detectors.py  change_processor.py  comparator.py  course_sync.py  data_transformer.py  data_types.py  default_question_service.py  diff_engine.py  extractor.py  main.py  models.py  side_effects.py  signals.py  sync_types.py  tasks.py
course_ware/: admin.py  apps.py  completion.py  course_sync.py  data_types.py  documents.py  factory_views.py  grade_book.py  mixins.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
course_ware_ext/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
courses/: models.py
data_types/: ai_core.py  course_ware_models.py  course_ware_schema.py  elastic_search.py  flash_cards.py  performance.py  questions.py
docs/: models.md
edu_vault/: asgi.py  mongodb.py  settings.py  urls.py  wsgi.py
elastic_search/: api.py  custom_signal_processor.py  operations.py  sample.py  sync.py  task_manager.py  tasks.py  transformer.py  views.py
flash_cards/: views.py
grade_book/: apps.py  grader.py  learning_context.py  learning_states.py  messages.py  models.py  performance_evaluator.py  progress_manager.py  strategy.py  tasks.py
lti_provider/: admin.py  lti_config.py  models.py  private_key.pem  urls.py  util.py  views.py
no_sql_database/: mongodb.py  nosql_database_engine.py
oauth_clients/: admin.py  edx_client.py  models.py  services.py  utils.py
problem_bank/: completion.py  models.py  progress_tracker.py  sample.py
question_generator/: apps.py  chemistry_introduction_to_chemistry_application_of_chemistry_openai.json  chemistry_introduction_to_chemistry_branches_of_chemistry_openai.json  chemistry_introduction_to_chemistry_chemist_careers_openai.json  chemistry_introduction_to_chemistry_meaning_of_chemistry_openai.json  generator.py  generator.txt  sam.py
repository/: ai_core.py  data_types.py  flash_card.py  grade_book.py  question_respository.py  repository_mixin.py  shared.py
src/: exceptions.py
static/: output.css
users/: models.py
vault_qstash/: config.py
webhooks/: edx_requests.py  handlers.py  models.py  registry.py  task_manager.py  tasks.py  urls.py  validator.py  validators.py  views.py
(+347 files in other folders)
