[project]
name = "ve-edu-vault"
version = "0.1.1"
description = "Virtu Educate Backend to augment Edx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
add-ons = [
    "adrf>=0.1.9",
    "django-cors-headers>=4.6.0",
    "django-extensions>=4.1",
    "django-json-widget>=2.0.1",
    "django-oauth-toolkit>=3.0.1",
    "django-rest-knox",
]
ai = [
    "langchain>=0.3.17",
]
core = [
    "redis>=5.2.1",
    "celery>=5.4.0",
    "django>=5.2",
    "djangorestframework>=3.15.2",
    "uvicorn>=0.34.2",
    "pylti1p3>=2.0.0",
    "qstash>=2.0.5",
]
database = [
    "django-elasticsearch-dsl>=8.0",
    "pymongo>=4.13.0",
]
lint = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
]
testing = [
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
]
utility = [
    "ipython>=9.2.0",
    "pydantic>=2.10.2",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
django-rest-knox = { git = "https://github.com/Virtu-E/django-rest-knox", rev = "5.0.3" }
